can now get an adverb but cannot add it to the generateProjectName function

--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 body {
   height: 100vh;
   width: 100%;
-  background-color: #222222;
+  background-color: #333333;
   display: grid;
   align-items: center;
   justify-content: center;
@@ -15,18 +15,11 @@ body {
   text-align: center;
 }
 
-h1 {
+.name {
   margin: 1rem 0;
   color: #f9f9f9f9;
   font-size: 3rem;
   line-height: calc(3rem * 1.42857);
-}
-
-.name {
-  margin: 1rem 0;
-  color: lightblue;
-  font-size: 4rem;
-  line-height: calc(4rem * 1.42857);
 }
 
 a {
@@ -35,8 +28,15 @@ a {
 
 .btn {
   color: #f9f9f9f9;
-  border: 5px solid #f9f9f9f9;
-  padding: 5px;
+  border: 1px solid #f9f9f9f9;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
   font-size: 2rem;
   line-height: calc(2rem * 1.42857);
+  transition: all 0.75s;
+}
+
+.btn:hover {
+  border: 1px solid orange;
+  color: orange;
 }
