--- a/main.css
+++ b/main.css
@@ -13,25 +13,38 @@ body {
   justify-content: center;
   font-size: 16px;
   text-align: center;
+  font-family: "Lato", sans-serif;
 }
 
 .name {
-  margin: 1rem 0;
-  color: #f9f9f9f9;
-  font-size: 3rem;
+  margin: 2.5rem 0;
+  color: rgba(255, 255, 255, 0.842);
+  font-size: 4rem;
   line-height: calc(3rem * 1.42857);
   text-transform: capitalize;
+  letter-spacing: 0.1ch;
+  font-weight: 100;
 }
 
 .btn {
+  background-color: rgba(255, 174, 0, 0.8);
+  color: rgba(255, 255, 255, 0.842);
   border-radius: 0.5rem;
   padding: 0.5rem 1rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
   line-height: calc(2rem * 1.42857);
-  transition: all 0.75s;
+  font-weight: 300;
+  letter-spacing: 0.1ch;
+  cursor: pointer;
+  border: 1px solid transparent;
+  outline: none;
+  transition: all 0.25s ease-in-out;
 }
 
 .btn:hover {
-  border: 1px solid orange;
-  color: orange;
+  transform: scale(1.1);
+}
+
+.btn:active {
+  transform: scale(0.9);
 }
